# EvSpikeSim

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakeLists_cpu.txt  CMakeLists_gpu.txt  LICENSE  README.md  setup.py
.github/workflows/: cmake.yml  cpp_library.yml  python_api.yml
core/: CMakeLists.txt
core/common/inc/evspikesim/: Spike.h  SpikeArray.h  SpikingNetwork.h
core/common/inc/evspikesim/Initializers/: ConstantInitializer.h  Initializer.h  NormalInitializer.h  UniformInitializer.h
core/common/inc/evspikesim/Layers/: FCLayer.h  FCLayerDescriptor.h  InferKernelBase.h  InferKernelDeclarations.h  InferKernelDefinitions.h  Layer.h  LayerDescriptor.h
core/common/inc/evspikesim/Misc/: DynamicLibraryLoader.h  JITCompiler.h  NDArray.h  RandomGenerator.h
core/common/src/: Spike.cpp  SpikeArray.cpp  SpikingNetwork.cpp
core/common/src/Layers/: DefaultFCLayerKernel.cpp  DefaultInferKernel.cpp  FCLayer.cpp  Layer.cpp  LayerDescriptor.cpp
core/common/src/Misc/: DynamicLibraryLoader.cpp  JITCompiler.cpp
core/cpu/: CMakeLists.txt
core/cpu/inc/evspikesim/: Spike.h  SpikeArray.h  SpikingNetwork.h
core/cpu/inc/evspikesim/Layers/: FCLayer.h  FCLayerKernel.h  InferKernel.h  Layer.h
core/cpu/inc/evspikesim/Misc/: Algorithms.h  ContainerTypes.h  Decorators.h  ThreadPool.h
core/cpu/src/: SpikingNetwork.cpp
core/cpu/src/Layers/: FCLayer.cpp  Layer.cpp
core/cpu/src/Misc/: JITCompiler.cpp  ThreadPool.cpp
core/gpu/: CMakeLists.txt
core/gpu/inc/evspikesim/: SpikeArray.h  SpikingNetwork.h
core/gpu/inc/evspikesim/Layers/: FCLayer.h  FCLayerKernel.h  InferKernel.h  Layer.h
core/gpu/inc/evspikesim/Misc/: Algorithms.h  ContainerTypes.h  CudaManagedAllocator.h  Decorators.h  GPUDevice.h
core/gpu/src/: SpikingNetwork.cpp
core/gpu/src/Layers/: FCLayer.cpp  Layer.cpp
core/gpu/src/Misc/: GPUDevice.cpp  JITCompiler.cpp
core/tests/: CMakeLists.txt  SpikeArray_test.cpp  SpikeNetwork_test.cpp  Spike_test.cpp
core/tests/Initializers/: ConstantInitializer_test.cpp  NormalInitializer_test.cpp  UniformInitializer_test.cpp
core/tests/Layers/: FCLayerDescriptor_test.cpp  FCLayer_test.cpp  LayerDescriptor_test.cpp
core/tests/Misc/: DynamicLibraryLoader_test.cpp  JITCompiler_test.cpp  NDArray_test.cpp
demos/: CMakeLists.txt  CustomFCLayerKernel.cpp  demo_fc.c  demo_fc.py  example.c  example.cpp  example.py  mnist_reward_stdp.py  performance_test.py  performance_test_cpu.py
demos/callbacks/: BasicTraces.cpp  RewardSTDP.cpp  STDP.cpp  WeightScaling.cpp
demos/datasets/: get_mnist.sh
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
docs/: Makefile  requirements.txt
docs/source/: advanced_guide.rst  conf.py  docker.rst  getting_started.rst  index.rst  installation.rst  python_api.rst  unit_tests.rst
docs/source/_templates/autosummary/: class.rst  module.rst
inc/: Spike.h  SpikeArray.h  SpikingNetwork.h  fc_layer.h  fc_layer_params.h  infer_thread_pool.h  layer_type.h  network.h  random.h  spike_list.h
inc/Initializers/: ConstantInitializer.h  Initializer.h  NormalInitializer.h  UniformInitializer.h
inc/Layers/: FCLayer.h  FCLayerDescriptor.h  Layer.h
inc/Misc/: NDArray.h
inc/python_interface/: py_fc_layer.h  py_module_init.h  py_network.h  py_random.h
python_api/: requirements.txt  setup.py
python_api/inc/: InitializersModule.h  LayersModule.h  MakeSubmodule.h  RandomModule.h
python_api/src/: EvSpikeSimPackage.cpp  InitializersModule.cpp  LayersModule.cpp  RandomModule.cpp
python_api/test/: SpikeArray_test.py  SpikingNetwork_test.py
python_api/tests/: RandomModule_test.py  SpikeArray_test.py  Spike_test.py  SpikingNetwork_test.py
python_api/tests/Initializers/: ConstantInitializer_test.py  NormalInitializer_test.py  UniformInitializer_test.py
python_api/tests/Layers/: FCLayerDescriptor_test.py  FCLayer_test.py  LayerDescriptor_test.py
src/: CMakeLists.txt  Spike.cpp  SpikeArray.cpp  SpikingNetwork.cpp  fc_layer_params.c  network.c  random.c  spike_list.c
src/Layers/: Layer.cpp  LayerDescriptor.cpp
src/Layers/CPU/: FCLayer.cpp
src/cpu/: fc_layer.c  infer_thread_pool.c
src/gpu/: fc_layer.cu
src/python_interface/: py_fc_layer.c  py_module_init.c  py_network.c  py_random.c
test/: CMakeLists.txt  SpikeArray_test.cpp  SpikeNetwork_test.cpp  Spike_test.cpp
test/Initializers/: ConstantInitializer_test.cpp  NormalInitializer_test.cpp  UniformInitializer_test.cpp
test/Layers/: FCLayerDescriptor_test.cpp  LayerDescriptor_test.cpp
test/Layers/CPU/: FCLayer_test.cpp
test/Misc/: NDArray_test.cpp
